--- a/resume.html
+++ b/resume.html
@@ -38,12 +38,12 @@
 
 
 
-        <li>Python</li>
-        <li>Java</li>
-        <li>C</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>DBMS</li>
+        Python<br>
+        Java<br>
+        C<br>
+        HTML<br>
+        CSS<br>
+        DBMS<br>
 
 
 
