--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <footer>
     <hr>
-    <code>Copyright (c) 2020 Deepika P</code>
+    <code>Copyright &copy; 2020 Deepika P</code>
   </footer>
 
 </html>
