--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="robots" content="noindex, nofollow">
   </header>
 
-  <body>
+  <body bgcolor="orange">
     <img src="images/banner.jpg" width="75%" alt="banner">
         <h1>Deepika P's Portal</h1>
     <h2>About Me</h2>
