--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <meta name="robots" content="noindex, nofollow">
   </header>
 
-  <body bgcolor="orange">
+  <body >
     <img src="images/banner.jpg" width="75%" alt="banner">
         <h1>Deepika P's Portal</h1>
-    <h2 style="color:red">About Me</h2>
+    <h2>About Me</h2>
     <p> I am a Website and mobile app developer.</p>
       <p>I am pursuing BE - Computer Science and Engineering.</p>
       <h2>Credentials and Portfolio</h2>
