--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,15 @@
         CSS<br>
         DBMS<br>
 
+<h2>Mini Project</h2>
 
+
+
+
+        Name of the Project : Online Book Purchasing Website<br>
+        Technologies/Tools  : Python, Flask, HTML and CSS<br>
+        Description         : Developed a website which allows users to purchase books via online.<br>
+        
 
 
   </body>
