--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,8 @@
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
 
     <h2>Portfolio</h2>
-
+    <p id='demo' style = 'display: none'>This is my career Objectivet</p>     
+    <button type='button' onclick="document.getElementById('demo').style.display='block'" >CO</ button>
 
     <h2>Education</h2>
 
