--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="en">
 
   <header>
-    <title>Deepika P's Portal</title>
+    <title>Deepika Parandaman Portal</title>
     <link rel="stylesheet" href="css/master.css">
     <link rel="FaviconIcon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut" href="favicon.ico" type="image/x-icon">
@@ -18,11 +18,11 @@
     <img src="images/banner.jpg" width="75%" alt="banner">
         <h1>Deepika P's Portal</h1>
     <h2>About Me</h2>
-    <p> I am a Website and mobile app developer.</p>
-      <p>I am pursuing BE - Computer Science and Engineering.</p>
+    <p> Developer | Content Writer</p>
+      <p></p>
       <h2>Credentials and Portfolio</h2>
 
-      <p><a href= "resume.html">My Resume</a></p>
+      <p>To know more about myself click <a href= "resume.html">My Resume</a></p>
 
   </body>
 
