--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <html lang="en">
 
   <header>
-    <title>Deepika Portal</title>
+    <title>DEEPIKA PORTAL</title>
     <link rel="stylesheet" href="css/master.css">
     <link rel="FaviconIcon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut" href="favicon.ico" type="image/x-icon">
     <meta name="viewpoint" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="name" content="Deepika's Portal">
+    <meta name="name" content="DEEPIKA PORTAL">
     <meta name="robots" content="noindex, nofollow">
   </header>
 
