--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
   <body>
     <img src="images/banner.jpg" width="75%" alt="banner">
-        <h1>Deepika P's Portal</h1>
+        <h1>DEEPIKA's PORTAL</h1>
     <h2>About Me</h2>
     <p> Developer | Content Writer</p>
       <p></p>
       <h2>Credentials and Portfolio</h2>
 
-      <p>To know more about myself click <a href= "resume.html">My Resume</a></p>
+      <p>To know more about myself... <a href= "resume.html">Click My Resume</a></p>
 
   </body>
 
