--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <img src="images/banner.jpg" width="75%" alt="banner">
-        <h1>DEEPIKA's PORTAL</h1>
+        <h1>DEEPIKA'S PORTAL</h1>
     <h2>About Me</h2>
     <p> Developer | Content Writer</p>
       <p></p>
