--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@ in the best possible way with sheer determination and commitment.</p><br>
 <button type='button' onclick="document.getElementById('demo2').style.display='block'" >SKILLS</button><br>
     <p id='demo2' style = 'display: none'>Competent in Java, Python and C<br>
 	    Working knowledge on using MySQL and Oracle<br>
-Passionately learning Blockchain, Data Science and Microservices<br>
+Passionately learning Blockchain, Data Science and Webservices<br>
 Excellent in HTML, CSS and Bootstrap<br>
 
 Good knowledge in Spring MVC, Flask and Java Database Connectivity<br>
