--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </header>
 
   <body>
+    <img src="banner.jpg" alt="banner" width="500" height="600">
         <h1>DEEPIKA'S PORTAL</h1>
     <h2>About Me</h2>
     <p> Developer | Content Writer</p>
