--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <body>
-    <img src="images/banner.jpg" alt="banner" width="500" height="600">
+    <img src="images/pass.jpg" alt="banner" width="700" height="300">
         <h1>DEEPIKA'S PORTAL</h1>
     <h2>About Me</h2>
     <p> Developer | Content Writer</p>
