--- a/resume.html
+++ b/resume.html
@@ -16,6 +16,7 @@
 
   <body>
     <hr>
+	  <img src="images/creative-writing.jpg" alt="banner" width=100% height="300">
 
     <h1>DEEPIKA</h1>
     <h4>Developer | Content Writer</h4>
