--- a/resume.html
+++ b/resume.html
@@ -92,6 +92,15 @@ Good in communication and written skills<br>
 	    Mobile Application Development<br>
 	  </p>
 	  <br>
+	  
+	  
+	     <button type='button' onclick="document.getElementById('demo7').style.display='block'" >MY WRITINGS</button><br>
+    <p id='demo7' style = 'display: none'>
+	    <a href="https://www.thewhyculture.com/questions-to-ask-yourself/">100 Questions to Ask Yourself</a><br>
+	     <a href="https://www.thewhyculture.com/most-important-things-in-life/">30 Most Important Things in Life</a><br>
+	    
+	  </p>
+	  <br>
 
 
         
