--- a/resume.html
+++ b/resume.html
@@ -96,6 +96,7 @@ Good in communication and written skills<br>
 	  
 	     <button type='button' onclick="document.getElementById('demo7').style.display='block'" >MY WRITINGS</button><br>
     <p id='demo7' style = 'display: none'>
+	    <img src="images/click.png" alt="creative" width=20% height="10%">
 	    <a href="https://www.thewhyculture.com/questions-to-ask-yourself/">100 Questions to Ask Yourself</a><br>
 	     <a href="https://www.thewhyculture.com/most-important-things-in-life/">30 Most Important Things in Life</a><br>
 	    
