--- a/resume.html
+++ b/resume.html
@@ -96,9 +96,9 @@ Good in communication and written skills<br>
 	  
 	     <button type='button' onclick="document.getElementById('demo7').style.display='block'" >MY WRITINGS</button><br>
     <p id='demo7' style = 'display: none'>
-	    <img src="images/click.jpg" alt="click" width=6% height="0.2%">
+	    <img src="images/click.jpg" alt="click" width=6% height="5">
 	    <a href="https://www.thewhyculture.com/questions-to-ask-yourself/">100 Questions to Ask Yourself</a><br>
-	    <img src="images/click.jpg" alt="click" width=6% height="0.2%">
+	    <img src="images/click.jpg" alt="click" width=6% height="5">
 	     <a href="https://www.thewhyculture.com/most-important-things-in-life/">30 Most Important Things in Life</a><br>
 	    
 	  </p>
